# ruwiktionary-htmldump-parser

./: .gitignore  README.md  pyproject.toml  run_everything.py  test.py  test_parser.py  todo.txt
.github/workflows/: create-dictionary.yml
docs/: execution_log.txt  get_affected_words.py  html_structure.md
example_html/: cocktail.html  test2.html  ungemein.html
ruwiktionary_htmldump_parser/: __init__.py  clean_data_for_dictionary.py  clean_inflections.py  create_ereader_dictionary.py  entry_data.py  helper_methods.py  htmldumpparser.py  pack_tar_gz.py  parse_wiktionary.py  test.py
tests/: test_ruwiktionary_htmldump_parser.py
