[tool.poetry]
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
description = "A parser of the Russian Wiktionary HTML dump which extracts its data into a JSON file"
name = "ruwiktionary-htmldump-parser"
version = "0.1.5"

[tool.poetry.dependencies]
beautifulsoup4 = "*"
lxml = "*"
pyglossary = {git = "https://github.com/Vuizur/pyglossary"}
python = "^3.8"
stressed_cyrillic_tools = "*"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "*"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
